RESOLVED FIXED164301
Allocation elimination of rest parameter doesn't take into account indexed properties on Array.prototype/Object.prototype
https://bugs.webkit.org/show_bug.cgi?id=164301
Summary Allocation elimination of rest parameter doesn't take into account indexed pr...
Saam Barati
Reported 2016-11-01 16:56:46 PDT
fix is coming.
Attachments
patch (9.59 KB, patch)
2016-11-01 17:50 PDT, Saam Barati
fpizlo: review+
patch (9.27 KB, patch)
2016-11-01 18:49 PDT, Saam Barati
buildbot: commit-queue-
Archive of layout-test-results from ews106 for mac-yosemite-wk2 (1.35 MB, application/zip)
2016-11-01 19:51 PDT, Build Bot
no flags
patch (9.27 KB, patch)
2016-11-02 13:33 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2016-11-01 17:50:10 PDT
Saam Barati
Comment 2 2016-11-01 18:49:04 PDT
Build Bot
Comment 3 2016-11-01 19:51:21 PDT
Comment on attachment 293628 [details] patch Attachment 293628 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2447662 New failing tests: svg/wicd/test-rightsizing-b.xhtml
Build Bot
Comment 4 2016-11-01 19:51:24 PDT
Created attachment 293633 [details] Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Saam Barati
Comment 5 2016-11-02 13:33:41 PDT
Created attachment 293691 [details] patch re-upload patch to restart EWS. It's very unlikely that this patch caused a crash in render code, but let's run EWS once more to be sure.
Geoffrey Garen
Comment 6 2016-11-02 15:46:21 PDT
Comment on attachment 293691 [details] patch r=me
WebKit Commit Bot
Comment 7 2016-11-02 16:18:31 PDT
Comment on attachment 293691 [details] patch Clearing flags on attachment: 293691 Committed r208311: <http://trac.webkit.org/changeset/208311>
WebKit Commit Bot
Comment 8 2016-11-02 16:18:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.